--- a/index.html
+++ b/index.html
@@ -2,11 +2,83 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Red Hot Chilli Peppers</title>
+        <title>Red Hot Chili Peppers - Can't stop</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
+    <body>
+        <div class="container">
+            <h2 class="title">Can't stop</h2>
+            <h3 class="subtitle">by Red Hot Chili Peppers</h3>
+            <p class="verse">Can't stop addicted to the shindig<br>
+                Chop top he says I'm gonna win big<br>
+                Choose not a life of imitation<br>
+                Distant cousin to the reservation<br>
+                Defunct the pistol that you pay for<br>
+                This punk the feeling that you stay for<br>
+                In time I want to be your best friend<br>
+                East Side lovers living on the West End<br>
+                 Knock out but boy you better come to<br>
+                Don't die you know the truth as some do<br>
+                Go write your message on the pavement<br>
+                Burning so bright I wonder what the wave meant<br>
+                White heat is screaming in the jungle<br>
+                Complete the motion if you stumble<br>
+                Go ask the dust for any answers<br>
+                Come back strong with 50 belly dancers
+                The world I love<br>
+                The tears I drop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Ever wonder if it's all for you<br>
+                The world I love<br>
+                The trains I hop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Come and tell me when it's time to
+            </p>
+            <p class="chorus">The world I love<br>
+                The tears I drop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Ever wonder if it's all for you<br>
+                The world I love<br>
+                The trains I hop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Come and tell me when it's time to
+            </p>
+            <p class="verse">Sweetheart is bleeding in the snowcone<br>
+                So smart she's leading me to ozone<br>
+                Music the great communicator<br>
+                Use two sticks to make it in the nature<br>
+                I'll get you into penetration<br>
+                The gender of a generation<br>
+                The birth of every other nation<br>
+                Worth your weight the gold of meditation<br>
+                This chapter's going to be a close one<br>
+                Smoke rings I know you're going to blow one<br>
+                All on a spaceship persevering<br>
+                Use my hands for everything but steering<br>
+                Can't stop the spirits when they need you<br>
+                Mop tops are happy when they feed you<br>
+                J. butterfly is in the treetop<br>
+                Birds that blow the meaning into bebop
+            </p>
+            <p class="chorus">The world I love<br>
+                The tears I drop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Ever wonder if it's all for you<br>
+                The world I love<br>
+                The trains I hop<br>
+                To be part of<br>
+                The wave can't stop<br>
+                Come and tell me when it's time to
+            </p>
+        </div>
+    </body>
 </html>
