Add credits in html body

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 The wave can't stop<br>
                 Come and tell me when it's time to
             </p>
+            <p><span>Autor tekstu: </span>Anthony Kiedis<br><span>Kompozytor: </span>Anthony Kiedis<br><span>Rok wydania: </span>2002<br><span>Album: </span>By the way</p>
         </div>
     </body>
 </html>
